made responsive and changed favicon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://assets-global.website-files.com/62d7c8cb6f11a35f47072653/62f14505ca91e92703452670_favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Network - Develop For Good </title>
   </head>
   <body>
     <div id="root"></div>
